force-app/main/default/objects/Audit_Record__c/Audit_Record__c.object-meta.xml
<CustomObject>
    <description>Generic object to store record update audit (change tracking) across multiple objects at the field level</description>
    <label>Audit Record</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Audit Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>