force-app/main/default/objects/Audit_Record__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Name of the Field with Value Changed</description>
    <externalId>true</externalId>
    <label>Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>