force-app/main/default/objects/Audit_Record__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Value of the Field after the Change</description>
    <label>New Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>