force-app/main/default/objects/Audit_Record__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Source object for the record</description>
    <externalId>true</externalId>
    <label>Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>