force-app/main/default/objects/Audit_Record__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Value of the Field before the Change</description>
    <label>Old Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>