force-app/main/default/objects/Audit_Record__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Salesforce Record ID</description>
    <externalId>true</externalId>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>